--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
-title:  Lagrange
-tagline:  a minimalist Jekyll theme
+title:  Minkoon's blog
+tagline:  Engineer and Traveler
 
 # Authors documented under _data
 
